package rappor;

// These collection parameters must be known to the RAPPOR analysis code.
message Params {
  optional int32 num_bits = 1;  // k
  optional int32 num_hashes = 2;  // h
  optional int32 num_cohorts = 3;  // m

  // TODO: Name of hash function?
}

message ReportListHeader {
  optional string metric_name = 1;
  optional int32 cohort = 2;
  optional Params params = 3;
}

message ReportList {
  optional ReportListHeader header = 1;
  repeated bytes report = 2;
}
